<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hesha</string>

    <string name="collection">专辑</string>
    <string name="choice">选酒</string>
    <string name="friends">朋友圈</string>
    <string name="my_info">我的</string>
    
    <string name="title">标题</string>
    <string name="digital_0">0</string>
    <string name="date_demo">2012&#8211;06&#8211;06 11:30:25</string>
    
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="back_to_main">回主页</string>
    <string name="more">更多&gt;&gt;</string>
    <string name="press_again_exit">再按一次退出</string>
    <!-- album -->
	<string name="collection_category">专辑分类</string>
	<string name="create_collection">+创建专辑</string>
	<string name="create_collection2">创建专辑</string>
	
	<string name="pictur">图片</string>
	<string name="goods">商品</string>
	
	<!-- login -->
	<string name="retrive_password">找回密码</string>
	<string name="login">登陆</string>
	<string name="account">账户</string>
	<string name="password">密码</string>
	<string name="account_hint">昵称/邮件</string>
	<string name="password_hint">请输入密码</string>
	
	<string name="taobao_account">淘宝账户</string>
	<string name="weibo_account">微博账号</string>
	<string name="qq_account">QQ号</string>
	
	<string name="signup_hesha">注册喝啥</string>
	<string name="signup">注册</string>
	
	<!-- signup -->
	<string name="email">邮箱</string>
	<string name="nickname">昵称</string>
	
	<string name="email_hint">请输入你常用的一个邮箱地址</string>
	<string name="nickname_hint">取一个你在喝啥的昵称</string>
	<string name="done">完成</string>
	
	<string name="no_net">目前网络不可以用</string>
    <string name="server_response_error">错误:\n服务暂不可用，请稍后再试</string>
    <string name="retry">重试</string>
    <string name="response_data_error">系统返回数据异常,请稍后再试</string>
    
    <!-- retrieve password -->
    <string name="retrieve_password">找回密码</string>
    <string name="input_the_regist_email">请输入注册时使用的邮箱</string>
    <string name="submit">提交</string>
    <string name="send">发送</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="tips">提示</string>
    
    <!-- 详情菜单 -->
    <string name="DetailsCollect">收藏</string>
    <string name="DetailsLike">喜欢</string>
    <string name="DetailsDiscuss">评论</string>
    <string name="DetailsShare">分享</string>
    
    <!-- 专辑详情 -->
    <string name="create_this">创建该专辑</string>
    <string name="no_record">对不起，没有相关记录</string>
    <string name="please_input_col_name">请输入专辑名称</string>
    
    <!-- 收藏 -->
    <string name="collect">收藏至专辑</string>
    <string name="create_or_search">创建或搜索专辑</string>
    
    <!-- 评论 -->
    <string name="pls_input_comment_content">请输入评论内容&#8230;</string>
    
    <!-- 知识 -->
    <string name="knowledge">知识</string>
    
    <!-- 选酒 -->
    <string name="hot">热门</string>
    <string name="price">价格</string>
    <string name="list">列表</string>
    <string name="grid">表格</string>
    <string name="filter">筛选</string>
    <string name="filter_goods">筛选商品</string>
    <string name="compare_and_buy">比比价再购买</string>
    <string name="go_and_buy">￥[#] | 直接买</string>
    <string name="expert_comment_number">达人点评([#]条)</string>
    <string name="normal_comment_number">大家点评([#]条)</string>
    <string name="sailers_number">以下商家在卖这款酒([#]个商家)</string>
    <string name="find_these_goods">共找到[#]件商品</string>
    <string name="unit_price">￥[#]</string>
    <string name="there_are_sailers">[#]个卖家</string>
    
    <string name="look_vedio">查看点评视频>></string>
    <string name="goods_details">商品详情</string>
    <string name="please_select_property">请选择对象属性</string>
    
    <string name="pls_input_key_words">请输入酒名</string>
    
    <string name="upload_photo">上传照片</string>
    <string name="upload_photo_tips">赶快上传和这款酒相关的照片吧</string>
    <string name="from_shot">拍照</string>
    <string name="from_albums">从手机相册选择</string>
    <string name="upload">上传</string>
    <string name="click_upload">点击上传</string>
    <string name="maohao">:</string>
    
    <!-- sliding menu -->
    <string name="menu_settings">Settings</string>
	<string name="github">GitHub</string>
    <string name="github_label">SlidingMenu on GitHub</string>
    
    <string-array name="select_dialog_items2">
        <item>Map</item>
        <item>Satellite</item>
        <item>Traffic</item>
        <item>Street view</item>
    </string-array>
</resources>