<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#f2f2f2"
    android:orientation="vertical"
     >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/DetailsDiscuss"
	        android:layout_weight="1"
	        />
	    
	    <Button
	        android:id="@+id/btn_submit_comment" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/submit"
	        />
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	    <EditText
	        android:id="@+id/et_content_comment"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:hint="@string/pls_input_comment_content" 
	        android:minLines="5"
	        android:maxLength="255"
	        />
	</LinearLayout>
	
	<Button 
	    android:id="@+id/btn_cancel_comment"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/cancel"
	    />
</LinearLayout>