<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:layout_width="match_parent" 
	android:layout_height="match_parent" 
	android:orientation="vertical"
	android:layout_gravity="center"
	android:background="#ffffff" 
	xmlns:android="http://schemas.android.com/apk/res/android">
	
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_collection"
        android:textColor="#d65152"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        >
        <EditText 
            android:id="@+id/et_col_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/please_input_col_name"
            android:maxLength="60"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" 
        >
        <Button 
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/white"
            />
        
        <Button 
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            />
    </LinearLayout>
    
    
</LinearLayout>
