<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/realtabcontent"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <android.support.v4.app.FragmentTabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:visibility="gone"
            />
        
        <RadioGroup android:gravity="center_vertical"  
            android:layout_gravity="bottom" android:orientation="horizontal"  
            android:id="@+id/main_radio" android:background="@drawable/title_top_bg"  
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:paddingTop="3dip"
            android:paddingBottom="3dip"
            android:paddingLeft="3dip"
            android:paddingRight="3dip"
            >  
            <RadioButton
                android:id="@+id/main_tab_0"
                style="@style/MMTabButton"
                android:checked="true"
                android:drawableTop="@drawable/tab_address"
                android:text="@string/collection" />

            <RadioButton
                android:id="@+id/main_tab_1"
                style="@style/MMTabButton"
                android:drawableTop="@drawable/tab_gigatalk"
                android:text="@string/choice" />


            <RadioButton
                android:id="@+id/main_tab_2"
                style="@style/MMTabButton"
                android:drawableTop="@drawable/tab_text_chat"
                android:text="@string/friends" />
            

            <RadioButton
                android:id="@+id/main_tab_3"
                style="@style/MMTabButton"
                android:drawableTop="@drawable/tab_voice"
                android:text="@string/my_info" />

  
        </RadioGroup>  
        
    </android.support.v4.app.FragmentTabHost>

</LinearLayout>