<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" >
            </FrameLayout>

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/layout_bottom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <RadioButton
		                android:id="@+id/main_tab_0"
		                style="@style/MainRadioButton"
		                android:checked="true"
		                android:text="@string/collection" 
		                />
		
		            <RadioButton
		                android:id="@+id/main_tab_1"
		                style="@style/MainRadioButton"
		                android:text="@string/choice"
		                 />
		
		
		            <RadioButton
		                android:id="@+id/main_tab_2"
		                style="@style/MainRadioButton"
		                android:text="@string/friends" 
		                />
		            
		
		            <RadioButton
		                android:id="@+id/main_tab_3"
		                style="@style/MainRadioButton"
		                android:text="@string/my_info"
		                
		                 />
	                </RadioGroup>
            </RelativeLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>